--- a/style.css
+++ b/style.css
@@ -11,12 +11,18 @@ header {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .logo {
+  padding: 0.5rem;
+  margin-left: 0.5rem;
   width: 300px;
-  height: 150px;
+  height: 50px;
+}
+
+.links {
+  margin-bottom: 0.5rem;
 }
 
 a {
@@ -24,6 +30,21 @@ a {
   text-decoration: none;
   color: white;
   font-size: 0.9rem;
+}
+
+.shop {
+  margin-bottom: 0.5rem;
+  display: flex;
+  position: relative;
+  top: 10px;
+}
+
+.shop img {
+  justify-content: space-between;
+  padding: 0.3rem;
+  margin-right: 0.5rem;
+  width: 40px;
+  height: 35px;
 }
 
 main {
@@ -35,6 +56,8 @@ section {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin-top: 25rem;
+  margin-left: 1rem;
 }
 h1 {
   font-size: 1.3rem;
@@ -44,9 +67,23 @@ p {
   font-size: 2rem;
 }
 section button {
+  margin-top: 2rem;
   border: 2px solid white;
   padding: 1rem;
   background-color: transparent;
   color: white;
   font-size: 0.8rem;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  margin-top: 3rem;
+}
+.down-arrow {
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(45deg);
 }
